# rmcp-agent

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: .env.example  rmcp_demo_server.rs  streaming_with_rmcp_tools.rs
src/agent/: builder.rs  core.rs  executor.rs  extension.rs  intermediate.rs  mod.rs
src/tool/: mod.rs  rmcp.rs
