[package]
name = "rmcp-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
chrono = "0.4.41"
futures-util = "0.3.31"
langchain-rust = "4.6.0"
rmcp = { version = "0.5.0", features = [
    "client",
    "client-side-sse",
    "reqwest",
    "transport-sse-client",
] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v7"] }

[dev-dependencies]
dotenv = "0.15.0"
