[package]
name = "rmcp-agent"
version = "0.1.1"
description = "A library that extends langchain-rust with support for Model Context Protocol (MCP) tool integration and streaming tool execution capabilities."
authors = ["bee0_0@icloud.com"]
edition = "2024"
license = "MIT"
keywords = ["mcp", "rmcp", "agent", "langchain", "sse"]
repository = "https://github.com/ZBcheng/rmcp-agent"
readme = "README.md"
exclude = ["examples/*"]

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
chrono = "0.4.41"
futures-util = "0.3.31"
langchain-rust = "4.6.0"
rmcp = { version = "0.5.0", features = [
    "client",
    "client-side-sse",
    "reqwest",
    "transport-sse-client",
] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v7"] }

[dev-dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
rmcp = { version = "0.5.0", features = ["transport-sse-server"] }
serde = "1.0.219"
tokio-util = "0.7.16"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
