[package]
name = "rmcp-agent"
version = "0.1.6"
description = "A library that extends langchain-rust with support for Model Context Protocol (MCP) tool integration and streaming tool execution capabilities."
authors = ["bee0_0@icloud.com"]
edition = "2024"
license = "MIT"
keywords = ["mcp", "rmcp", "agent", "langchain", "sse"]
repository = "https://github.com/ZBcheng/rmcp-agent"
readme = "README.md"
exclude = ["examples/*"]

[dependencies]
async-stream = "0.3.6"
async-trait = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
langchain-rust = "4.6.0"
rmcp = { version = "0.5.0", features = [
    "client",
    "client-side-sse",
    "reqwest",
    "transport-sse-client",
] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = "0.12.23"
rmcp = { version = "0.5.0", features = ["transport-sse-server"] }
serde = "1.0.219"
tokio-util = "0.7.16"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
